--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
       referrerpolicy="no-referrer"
     />
 
-    <title>CurrencyExchange</title>
+    <title>Storage calculator</title>
   </head>
   <body>
     <div id="root"></div>
